# rag_sample_rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/documents/test_data/: 112年度營利事業各業擴大書審純益率、所得額及同業利潤標準.json  112年度營利事業各業擴大書審純益率、所得額及同業利潤標準.txt  test_document.txt
src/tools/: find.json
